Fix 'about' layout on mobile

--- a/resources/sass/_imports/classes/_mg-pd.sass
+++ b/resources/sass/_imports/classes/_mg-pd.sass
@@ -1,19 +1,21 @@
+.py-2rem
+    +py(2rem, 2rem)
+.py-3rem
+    +py(3rem, 3rem)
 .py-4rem
     +py(4rem, 4rem)
 .py-6rem
     +py(6rem, 6rem)
 .py-50px
-    padding-top: 50px
-    padding-bottom: 50px
+    +py(50px, 50px)
 
 @media (min-width: 768px)
+    .py-md-4rem
+        +py(4rem, 4rem)
     .py-md-80px
-        padding-top: 80px
-        padding-bottom: 80px
+        +py(80px, 80px)
     .py-md-100px
-        padding-top: 100px
-        padding-bottom: 100px
+        +py(100px, 100px)
     .py-md-150px
-        padding-top: 150px
-        padding-bottom: 150px
+        +py(150px, 150px)
 
